--- a/Living-World/Living-World.vcxproj
+++ b/Living-World/Living-World.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{a9720600-6529-4a00-8250-ca657329bb6e}</ProjectGuid>
     <RootNamespace>LivingWorld</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Living-World2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
