--- a/Living-World/Living-World.vcxproj
+++ b/Living-World/Living-World.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Organism.cpp" />
     <ClCompile Include="Plant.cpp" />
     <ClCompile Include="Position.cpp" />
+    <ClCompile Include="Sheep.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -140,6 +141,7 @@
     <ClInclude Include="Organism.h" />
     <ClInclude Include="Plant.h" />
     <ClInclude Include="Position.h" />
+    <ClInclude Include="Sheep.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
